{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 934,
  "lineage": "8cbfbd3a-a489-d0e9-059e-6bbb62a13ade",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022837974dbdb67f4",
            "arn": "arn:aws:ec2:us-east-1:051826708196:elastic-ip/eipalloc-022837974dbdb67f4",
            "association_id": "eipassoc-0ec57403557d643b2",
            "domain": "vpc",
            "id": "eipalloc-022837974dbdb67f4",
            "instance": "i-0164f0db4b6253baa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0479e10232773c215",
            "private_dns": "ip-10-0-1-242.ec2.internal",
            "private_ip": "10.0.1.242",
            "public_dns": "ec2-3-228-107-182.compute-1.amazonaws.com",
            "public_ip": "3.228.107.182",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Jenkins-EIP"
            },
            "tags_all": {
              "Name": "Jenkins-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.jenkins",
            "aws_key_pair.jenkins_key",
            "aws_security_group.jenkins_sg",
            "aws_subnet.public",
            "aws_vpc.recarnation_vpc",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:051826708196:instance/i-0164f0db4b6253baa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0164f0db4b6253baa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "jenkins-key-e8f3915e",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0479e10232773c215",
            "private_dns": "ip-10-0-1-242.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.242",
            "public_dns": "ec2-54-86-186-35.compute-1.amazonaws.com",
            "public_ip": "54.86.186.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0813fae1bb335a57b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0692d1c06d454bf73",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07ed3a5bdcdaeae63"
            ]
          },
          "dependencies": [
            "aws_key_pair.jenkins_key",
            "aws_security_group.jenkins_sg",
            "aws_subnet.public",
            "aws_vpc.recarnation_vpc",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826708196:internet-gateway/igw-0a8f7f19d5ab5e85f",
            "id": "igw-0a8f7f19d5ab5e85f",
            "owner_id": "051826708196",
            "tags": {
              "Name": "recarnation-igw"
            },
            "tags_all": {
              "Name": "recarnation-igw"
            },
            "vpc_id": "vpc-07cc4e9313b08ce25"
          },
          "dependencies": [
            "aws_vpc.recarnation_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826708196:route-table/rtb-09d2c28663123eacf",
            "id": "rtb-09d2c28663123eacf",
            "owner_id": "051826708196",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8f7f19d5ab5e85f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07cc4e9313b08ce25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.recarnation_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0e14ac1d082ea1f",
            "route_table_id": "rtb-09d2c28663123eacf",
            "subnet_id": "subnet-0692d1c06d454bf73"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.recarnation_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08adcabf317a06674",
            "route_table_id": "rtb-09d2c28663123eacf",
            "subnet_id": "subnet-03d60efcd5a0d72d2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.recarnation_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826708196:security-group/sg-06e6319799e3ca84a",
            "description": "Allow inbound access to Elastic Beanstalk",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e6319799e3ca84a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "recarnation-eb-sg",
            "name_prefix": "",
            "owner_id": "051826708196",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07cc4e9313b08ce25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.recarnation_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826708196:security-group/sg-07ed3a5bdcdaeae63",
            "description": "Allow restricted access to Jenkins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ed3a5bdcdaeae63",
            "ingress": [
              {
                "cidr_blocks": [
                  "73.202.223.100/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "73.202.223.100/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "051826708196",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07cc4e9313b08ce25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.recarnation_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826708196:security-group/sg-05779f221b469ec88",
            "description": "Allow access to RDS from Elastic Beanstalk",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05779f221b469ec88",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07ed3a5bdcdaeae63"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "recarnation-rds-sg",
            "name_prefix": "",
            "owner_id": "051826708196",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "recarnation-rds-sg"
            },
            "tags_all": {
              "Name": "recarnation-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cc4e9313b08ce25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jenkins_sg",
            "aws_vpc.recarnation_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826708196:subnet/subnet-092a6a187cc7bdd43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092a6a187cc7bdd43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051826708196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07cc4e9313b08ce25"
          },
          "dependencies": [
            "aws_vpc.recarnation_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826708196:subnet/subnet-0745f652bde66e07d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0745f652bde66e07d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051826708196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07cc4e9313b08ce25"
          },
          "dependencies": [
            "aws_vpc.recarnation_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826708196:subnet/subnet-0692d1c06d454bf73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0692d1c06d454bf73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051826708196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "recarnation-public-1"
            },
            "tags_all": {
              "Name": "recarnation-public-1"
            },
            "vpc_id": "vpc-07cc4e9313b08ce25"
          },
          "dependencies": [
            "aws_vpc.recarnation_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826708196:subnet/subnet-03d60efcd5a0d72d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d60efcd5a0d72d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051826708196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "recarnation-public-2"
            },
            "tags_all": {
              "Name": "recarnation-public-2"
            },
            "vpc_id": "vpc-07cc4e9313b08ce25"
          },
          "dependencies": [
            "aws_vpc.recarnation_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "recarnation_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826708196:vpc/vpc-07cc4e9313b08ce25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0518daac6eac15bfa",
            "default_route_table_id": "rtb-0d4cdc65913b7914e",
            "default_security_group_id": "sg-020941075311216e2",
            "dhcp_options_id": "dopt-060d48992dd162809",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07cc4e9313b08ce25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4cdc65913b7914e",
            "owner_id": "051826708196",
            "tags": {
              "Name": "recarnation-vpc"
            },
            "tags_all": {
              "Name": "recarnation-vpc"
            }
          }
        }
      ]
    }
  ]
}